<resources>
    <string name="app_name">Easy Media Converter</string>
    <string name="communicate">Communicate</string>
    <string name="send_feedback">Send feedback</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="suggest_the_app_to_a_friend">Suggest the app to a friend</string>
    <string name="more_apps">More apps</string>
    <string name="about">About</string>
    <string name="sendEmailSubject">[%s] Feedback</string>
    <string name="sendCriticalEmailSubject">[%s] I’m unsatisfied with the app</string>
    <string name="sendErrorEmailSubject">[%s] Error</string>
    <string name="sendLogsText">Please enter your feedback or bug report below. System information and app logs are included.</string>
    <string name="shareAppSubject">Check out this app</string>
    <string name="shareAppText">I am using %1$s and enjoying it! Try it out: %2$s @Digipom #android</string>
    <string name="openFromSystemContentDescription">Open media file</string>
    <string name="recent">Recent</string>
    <string name="previous">Previous</string>
    <string name="opened_relative_time">Opened %s</string>
    <string name="action_relative_time">%1$s %2$s</string>
    <string name="clearContentDescription">Clear</string>
    <string name="moreDetailsContentDescription">More details</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="deleteConfirmation">“%s” can’t be recovered once deleted.</string>
    <string name="rateAppTitle">Rate app</string>
    <string name="rateRequestPrompt">Enjoying this version of %s?</string>
    <string name="yesALot">Yes, a lot</string>
    <string name="notMuch">Not much</string>
    <string name="pleaseGetInTouchWithUs">We would love to help you! Please let us know what we could do to make it better.</string>
    <string name="pleaseRateUsOnTheMarket">Wonderful! Could you please leave us a 5-star review? It will help us make the app even better for you.</string>
    <string name="notNow">Not now</string>
    <string name="noThanks">No thanks</string>
    <string name="start_by_choosing_a_file">Choose a file to get started.</string>
    <string name="title_activity_player">Edit</string>
    <string name="title_activity_player_for_share_audio">Edit and convert audio</string>
    <string name="title_activity_player_for_share_video">Edit and convert video</string>
    <string name="start_looping">Start looping</string>
    <string name="stop_looping">Stop looping</string>
    <string name="rewind">Rewind</string>
    <string name="fastforward">Fast-forward</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="formattedSpeed">%sx</string>
    <string name="formattedSpeedContentDescription">Playback speed: %s</string>
    <string name="elaspedTimeContentDescription">Elapsed time: %s</string>
    <string name="totalTimeContentDescription">Duration: %s</string>
    <string name="chooseAnAction">Choose an action</string>
    <string name="trim">Trim</string>
    <string name="cut">Cut</string>
    <string name="split">Split</string>
    <string name="combine">Combine</string>
    <string name="add_silence">Add silence</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="adjust_volume">Adjust volume</string>
    <string name="normalize">Normalize</string>
    <string name="adjust_speed">Adjust speed</string>
    <string name="convert">Convert</string>
    <string name="convert_to_video">Make video</string>
    <string name="extract_audio">Extract audio</string>
    <string name="trimming">Trimming</string>
    <string name="cutting">Cutting</string>
    <string name="splitting">Splitting</string>
    <string name="combining">Combining</string>
    <string name="adding_silence">Adding silence</string>
    <string name="setting_ringtone">Setting ringtone</string>
    <string name="adjusting_volume">Adjusting volume</string>
    <string name="normalizing">Normalizing</string>
    <string name="adjusting_speed">Adjusting speed</string>
    <string name="converting">Converting</string>
    <string name="converting_to_video">Making video</string>
    <string name="extracting_audio">Extracting audio</string>
    <string name="trimmed">Trimmed</string>
    <string name="was_cut">Cut</string>
    <string name="was_split">Split</string>
    <string name="combined">Combined</string>
    <string name="added_silence">Added silence</string>
    <string name="was_set_as_ringtone">Set as ringtone</string>
    <string name="adjusted_volume">Adjusted volume</string>
    <string name="normalized">Normalized</string>
    <string name="adjusted_speed">Adjusted speed</string>
    <string name="converted">Converted</string>
    <string name="converted_to_video">Made video</string>
    <string name="extracted_audio">Extracted audio</string>
    <string name="bitrate">Bitrate</string>
    <string name="default_bitrate">Default</string>
    <string name="bitrate_quality">Quality: %d</string>
    <string name="lower_values_indicate_higher_quality">Lower values are higher quality</string>
    <string name="video">Video</string>
    <string name="will_make_mp4_video">Audio will be exported as an MP4 video.</string>
    <string name="cover_image_content_description">Cover image</string>
    <string name="reset_to_default_content_description">Reset to default</string>
    <string name="select_range_to_keep">Select range to keep</string>
    <string name="trimBefore">Trim before</string>
    <string name="trimAfter">Trim after</string>
    <string name="trimBeforeContentDescription">Trim before time: %s</string>
    <string name="trimAfterContentDescription">Trim after time: %s</string>
    <string name="select_range_to_remove">Select range to remove</string>
    <string name="cutStart">Cut start</string>
    <string name="cutEnd">Cut end</string>
    <string name="cutStartingAtContentDescription">Cut starting at time: %s</string>
    <string name="cutEndingAtContentDescription">Cut until time: %s</string>
    <string name="warning_remaining_section_would_be_too_short">Resulting recording would be too short.</string>
    <string name="decreaseContentDescription">Decrease</string>
    <string name="increaseContentDescription">Increase</string>
    <string name="select_time_to_insert_silence">Select time to insert silence</string>
    <string name="silence_duration">Silence duration</string>
    <string name="will_normalize_using_ffmpeg_default">Audio will be normalized using FFMPEG’s EBU R128 loudness normalization.</string>
    <string name="select_split_position">Select split position</string>
    <string name="splitting_will_save_into_two_files">Splitting this file will save data into two files.</string>
    <string name="warning_split_would_be_too_short">Resulting split would be too short.</string>
    <string name="dragContentDescription">Drag</string>
    <string name="removeContentDescription">Remove</string>
    <string name="ringtone_type">Type</string>
    <string name="ringtone_type_phone">Phone</string>
    <string name="ringtone_type_notification">Notification</string>
    <string name="ringtone_type_alarm">Alarm</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="hundredths_of_milliseconds">x100 ms</string>
    <string name="allowable_time_range">Allowable range: %1$s - %2$s</string>
    <string name="apply">Apply</string>
    <string name="main_notification_channel">Main</string>
    <string name="errors_notification_channel">Errors</string>
    <string name="important_messages_channel">Important messages</string>
    <string name="about_to_start">About to start</string>
    <string name="editing_template">%1$s %2$s</string>
    <plurals name="items">
        
        <item quantity="one">%1$s</item>
        
        <item quantity="other">%2$d items</item>
    </plurals>
    <string name="stop">Stop</string>
    <string name="error_doing_action">Error %s</string>
    <string name="error_could_not_create_new_document">Couldn’t create new file for output.</string>
    <string name="error_could_not_open_document">Couldn’t open input.</string>
    <string name="couldnt_open_media_item">Couldn’t open media item</string>
    <string name="errorHeader">Something went wrong. 🙁 Can we help? Please tap on “%s” to get in touch.</string>
    <string name="close">Close</string>
    <string name="noBrowserApp">No browser found.</string>
    <string name="noEmailApp">No email app found.</string>
    <string name="noShareApp">No sharing apps found.</string>
    <string name="permissionRationaleForRingtone">To set “%s” as a ringtone, allow the app permission to modify system settings.</string>
    <string name="openSystemSettings">Open system settings</string>
    <string name="noPermissionsSettingsScreenFound">No permissions settings screen found</string>
</resources>