<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2020 Kevin Brothaler. All rights reserved.
 *
 * https://github.com/Digipom/easy-media-converter
 *
 * This file is part of Easy Media Converter.
 *
 * Easy Media Converter is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * Easy Media Converter is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with Easy Media Converter.  If not, see <http://www.gnu.org/licenses/>.
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_send_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send_feedback" />
            <item
                android:id="@+id/nav_rate_the_app"
                android:icon="@drawable/ic_rate_review_black_24dp"
                android:title="@string/rate_the_app" />
            <item
                android:id="@+id/nav_suggest_app_to_a_friend"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/suggest_the_app_to_a_friend" />
            <item
                android:id="@+id/nav_more_apps"
                android:icon="@drawable/ic_apps_black_24dp"
                android:title="@string/more_apps" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_baseline_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
